# iphalide

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  LICENSE  README.md
halide/include/: Halide.h
halide/lib/cmake/Halide/: Halide-shared-targets-release.cmake  Halide-shared-targets.cmake  Halide-static-targets.cmake  HalideConfig.cmake  HalideConfigVersion.cmake
halide/lib/cmake/HalideHelpers/: HalideHelpersConfig.cmake  HalideHelpersConfigVersion.cmake
include/: util.h
src/: bm3d.cpp  conv.cpp  dct2d.cpp  idct2d.cpp  ssim.cpp  util.cpp
src/bm3d/: bm3d_halide.cpp
test/: main.cpp
